{
    "name": "KeyBoardInputActions",
    "maps": [
        {
            "name": "Car",
            "id": "a0036ea9-bffd-4917-b8f7-9d7153a2f161",
            "actions": [
                {
                    "name": "FrontMoveKeyBoard",
                    "type": "Value",
                    "id": "ba5ec858-3c59-4c96-a1dc-a27e8dcaf81f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FrontMoveSteeringWheel",
                    "type": "Value",
                    "id": "b001e9d9-39e1-4003-8e0c-94e0903c54e5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftRightMoveKeyBoard",
                    "type": "Value",
                    "id": "6596cca0-98e3-4691-b988-f34517693459",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftRightMoveSteeringWheel",
                    "type": "Value",
                    "id": "6a8cf518-f2c4-4bad-9584-480ee83382c1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BreakKeyBoard",
                    "type": "Value",
                    "id": "68e05661-ec53-4fa2-96c3-a6425ee83ce3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BreakSteeringWheel",
                    "type": "Value",
                    "id": "74ee1dbe-2685-4171-9e8a-c9337236b4b0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftRightKeyBoard",
                    "type": "Value",
                    "id": "3f9c8469-e7ab-4707-aec3-da4a014a832a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftRightSteeringWheel",
                    "type": "Value",
                    "id": "ca3d2406-992c-4418-9670-a06c8ea9b9ee",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UpDownKeyBoard",
                    "type": "Value",
                    "id": "41958b4a-2cc8-4a28-92f6-44be3a756340",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UpDownSteeringWheel",
                    "type": "Value",
                    "id": "e5c9c5ca-c590-42ff-b359-a9dda62611d8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LightControlKeyBoard",
                    "type": "Button",
                    "id": "fc162b0a-92cd-4e8e-817a-3f7474711eaf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightControlSteeringWheel",
                    "type": "Button",
                    "id": "eaaa6aa4-87f0-4863-b023-932034cb9add",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GearChangeKeyBoard",
                    "type": "Button",
                    "id": "82686259-71cb-4b03-9108-dc23d1046ed1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GearChangeSteeringWheel",
                    "type": "Button",
                    "id": "118b53b4-0758-4a4a-97de-e05e7a122869",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SideBreakKeyBoard",
                    "type": "Button",
                    "id": "9d9bcee7-957b-4e23-a592-607c98969a5c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SideBreakSteeringWheel",
                    "type": "Button",
                    "id": "bfcb4312-fff0-4fa0-a574-6adbc8d7539f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SettingsKeyBoard",
                    "type": "Button",
                    "id": "5ed7fe1d-b9f2-4bc7-a1c2-b52e2d1a6cda",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SettingsSteeringWheel",
                    "type": "Button",
                    "id": "ae42fe20-259c-421c-982c-dc09946bd04a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectKeyBoard",
                    "type": "Button",
                    "id": "84ef3a1b-711d-48ad-949c-e53851520d29",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSteeringWheel",
                    "type": "Button",
                    "id": "5f643888-5de6-410b-bfca-37d24826ba14",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UndoKeyBoard",
                    "type": "Button",
                    "id": "f357fd35-ceaa-46a7-b9fd-1df6ddbcea9b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UndoSteeringWheel",
                    "type": "Button",
                    "id": "df93c5c4-4a0d-4842-bc14-50172e782e33",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d3ec518-8fa7-4675-ac87-bfd2daaeebb9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "FrontMoveKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1928dbe2-0703-4ad4-a6f9-9e3c63de521a",
                    "path": "<HID::Wired Wheel>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "FrontMoveSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "9c750f1d-4179-44b3-a839-545b3db79fbe",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRightMoveKeyBoard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "864548d4-d0dd-475c-b6c1-60d9595d40ee",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "LeftRightMoveKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "717c1412-03eb-4e48-ac33-e63b0147aaed",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "LeftRightMoveKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "ba3a79fb-1475-4c41-af40-b8332f71fa0a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRightMoveSteeringWheel",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "20b9d143-a71b-4c64-80c8-030e96510f15",
                    "path": "<HID::Wired Wheel>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "LeftRightMoveSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f78d16e1-ec10-4218-a4ed-9e3e97e7cac9",
                    "path": "<HID::Wired Wheel>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "LeftRightMoveSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d366074a-4c09-4ac7-909d-91091275cce8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "BreakKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a20c8db2-59ce-4199-8592-11353781a9df",
                    "path": "<HID::Wired Wheel>/rz",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "BreakSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "fd69f051-a9b0-4c81-bc4b-3b2cef4b16e7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRightKeyBoard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0befa851-a18d-4a3a-88a7-a97ebb649e0c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "LeftRightKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ccac7307-5d22-4f0b-aa51-edc661c53125",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "LeftRightKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "b49c5ede-1767-46c2-a58d-6c09b97bf7fb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRightSteeringWheel",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "012d81fc-2b46-4d25-be57-ab55e859611b",
                    "path": "<HID::Wired Wheel>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "LeftRightSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0644e6b2-41c2-452c-9416-80de08273a0e",
                    "path": "<HID::Wired Wheel>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "LeftRightSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "b3c94f76-30c6-4f48-bb0b-cf25121a0bb6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDownKeyBoard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c3cbf044-3c2b-4f2a-803d-8922fcb5a365",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "UpDownKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f1b81cda-3989-4245-8391-ab9096201acf",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "UpDownKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "1e0b1e0c-1e7b-483e-8eaf-c94366a105b1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDownSteeringWheel",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b29e54d3-017c-4523-adb9-7c318e4295a9",
                    "path": "<HID::Wired Wheel>/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "UpDownSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2051ad8f-146f-44e5-9b45-dcd7811a3afb",
                    "path": "<HID::Wired Wheel>/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "UpDownSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "87856a91-8cce-4a59-b483-d1df1d20ef25",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "LightControlKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bb5b74e-46a2-46b7-a02a-2f0c703ea475",
                    "path": "<HID::Wired Wheel>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "LightControlSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f568014-d9ab-4a01-95bc-25ff985b1412",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "GearChangeKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e0655a4-992e-4cd5-8887-23eb228254f1",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "GearChangeKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93b0f1b6-430a-4d15-9f6f-5986f7369ac9",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "GearChangeKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "840de1d8-20f7-4776-8ebe-be9f318dc5a1",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "GearChangeKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "282c01be-388f-4543-8d95-70acbaeedd2e",
                    "path": "<HID::Wired Wheel>/button17",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "GearChangeSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "717ae1c5-2c97-4ca6-8de5-18e506aa64e9",
                    "path": "<HID::Wired Wheel>/button18",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "GearChangeSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3678b50-8530-4137-949c-2400afc65872",
                    "path": "<HID::Wired Wheel>/button21",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "GearChangeSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1923bf15-1a75-472f-93d6-ac563a6241fa",
                    "path": "<HID::Wired Wheel>/button22",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "GearChangeSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bc8b662-33b5-49e0-8f41-a377d23969ca",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "SideBreakKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8076882e-c532-4812-93b0-8f606ce3af20",
                    "path": "<HID::Wired Wheel>/button16",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "SideBreakSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a9f1dd1-4647-4514-888d-6ee769b69790",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "SettingsKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51b3b88a-a70b-4cd4-a131-063b2bc3a2c5",
                    "path": "<HID::Wired Wheel>/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "SettingsSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45ee13e4-f575-4f3d-8e4a-1f16c4a395a7",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "SelectKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bed6c7b-cd67-4424-b84f-bf645985b357",
                    "path": "<HID::Wired Wheel>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "SelectSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43b65f45-998d-47aa-bc92-9c6378562688",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "UndoKeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20a53ece-97a7-40a7-bd80-25baa7198a1e",
                    "path": "<HID::Wired Wheel>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Steering Wheel",
                    "action": "UndoSteeringWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Steering Wheel",
            "bindingGroup": "Steering Wheel",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<HID::Wired Wheel>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}